--- a/web/src/app/ui/login-page/login-page.component.css
+++ b/web/src/app/ui/login-page/login-page.component.css
@@ -3,6 +3,41 @@
     font-size: 0.8em;
 }
 
-.card {
-    background-color: #103c3b
+.custom-input {
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.custom-input:focus {
+    border-color: #2575fc;
+    box-shadow: 0 0 8px rgba(50, 150, 255, 0.6);
+}
+
+.custom-button {
+    background: linear-gradient(to right, #6a11cb, #2575fc);
+    border: none;
+    padding: 0.75rem 1.5rem;
+    border-radius: 30px;
+    transition: background-color .3s;
+}
+
+.custom-button:hover {
+    background: linear-gradient(to right, #8e2de2, #4a00e0);
+}
+
+@media (max-width: 576px) {
+
+    .card h1,
+    .card p,
+    .form-control,
+    a,
+    label {
+        font-size: smaller;
+    }
+
+    img {
+        width: 80%;
+    }
 }
