--- a/web/src/app/comps/nav-bar/nav-bar.component.html
+++ b/web/src/app/comps/nav-bar/nav-bar.component.html
@@ -1,30 +1,36 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
+<nav style="background-color: #0E1550;" class="navbar navbar-expand-lg">
     <!-- Container wrapper -->
     <div class="container-fluid">
         <!-- Toggle button -->
-        <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
+            <i class="bi bi-list text-white"></i>
         </button>
+
+        <!-- Navbar brand -->
+        <a class="navbar-brand" href="#" style="margin-left: 10px;">
+            <img src="../../../assets/logo-navbar.png" height="30" alt="Logo" loading="lazy" />
+        </a>
 
         <!-- Collapsible wrapper -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Navbar brand -->
-            <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                <img src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp" height="15" alt="MDB Logo"
-                    loading="lazy" />
-            </a>
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Dashboard</a>
+                    <button class="btn btn-link nav-link text-white fst-normal" (click)="openModal()">
+                        Select your city <i style="font-size: 10px;" class="bi bi-caret-down-fill"></i>
+                    </button>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Team</a>
+                <li *ngIf="authService.isOrganizer()" class="nav-item">
+                    <button class="btn btn-link nav-link text-white fst-normal" routerLink="/organizer/dashboard">
+                        Organizer Panel
+                    </button>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                <li *ngIf="authService.isAdmin()" class="nav-item">
+                    <button class="btn btn-link nav-link text-white fst-normal">
+                        Admin Panel
+                    </button>
                 </li>
             </ul>
             <!-- Left links -->
@@ -33,49 +39,21 @@
 
         <!-- Right elements -->
         <div class="d-flex align-items-center">
-            <!-- Icon -->
-            <a class="text-reset me-3" href="#">
-                <i class="fas fa-shopping-cart"></i>
-            </a>
-
-            <!-- Notifications -->
-            <div class="dropdown">
-                <a data-mdb-dropdown-init class="text-reset me-3 dropdown-toggle hidden-arrow" href="#"
-                    id="navbarDropdownMenuLink" role="button" aria-expanded="false">
-                    <i class="fas fa-bell"></i>
-                    <span class="badge rounded-pill badge-notification bg-danger">1</span>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                    <li>
-                        <a class="dropdown-item" href="#">Some news</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">Another news</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- Avatar -->
-            <div class="dropdown">
-                <a data-mdb-dropdown-init class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#"
+            <div *ngIf="authService.isLoggedIn(); else notLoggedInTemplate" ngbDropdown class="d-inline-block">
+                <a ngbDropdownToggle class="dropdown-toggle d-flex align-items-center hidden-arrow text-white"
                     id="navbarDropdownMenuAvatar" role="button" aria-expanded="false">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle" height="25"
-                        alt="Black and White Portrait of a Man" loading="lazy" />
+                    <i style="font-size: 25px;" class="bi bi-person-circle text-white"> </i>
                 </a>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
-                    <li>
-                        <a class="dropdown-item" href="#">My profile</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">Settings</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">Logout</a>
-                    </li>
-                </ul>
+                <div ngbDropdownMenu class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
+                    <button ngbDropdownItem class="dropdown-item" href="#">My profile</button>
+                    <button ngbDropdownItem class="dropdown-item" (click)="logout()">Logout</button>
+                </div>
             </div>
+            <ng-template #notLoggedInTemplate>
+                <a routerLink="/login" class=" text-white" role="button" aria-expanded="false">
+                    <i style="font-size: 25px;" class="bi bi-person-circle text-white"> </i>
+                </a>
+            </ng-template>
         </div>
         <!-- Right elements -->
     </div>
