ready for add admin panel

--- a/web/src/app/comps/nav-bar/nav-bar.component.html
+++ b/web/src/app/comps/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
 
         <!-- Navbar brand -->
         <a class="navbar-brand" href="#" style="margin-left: 10px;">
-            <img src="../../../assets/logo-navbar.png" height="30" alt="Logo" loading="lazy" />
+            <img style="height: 50px;" src="../../../assets/logo-navbar.png" height="30" alt="Logo" loading="lazy" />
         </a>
 
         <!-- Collapsible wrapper -->
