--- a/student-go-web/src/app/ui/admin-cities/admin-cities.component.html
+++ b/student-go-web/src/app/ui/admin-cities/admin-cities.component.html
@@ -3,6 +3,142 @@
     <div class="p-4 dark:border-gray-700">
         <p class="text-4xl font-bold">Cities</p>
         <div class="relative overflow-x-auto p-2">
+            <div
+                class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white">
+                <div>
+                    <button (click)="openModalCreate()"
+                        class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-1.5 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
+                        type="button">
+                        <span class="sr-only">Create button</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+                        </svg>
+                        New City
+                    </button>
+                </div>
+                <label for="table-search" class="sr-only">Search</label>
+                <div class="relative">
+                    <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
+                        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
+                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                        </svg>
+                    </div>
+                    <input type="text" id="table-search-users"
+                        class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="Search for city">
+                </div>
+            </div>
+            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                    <tr>
+                        <th scope="col" class="px-6 py-3">
+                            Id
+                        </th>
+                        <th scope="col" class="px-6 py-3 text-left">
+                            Name
+                        </th>
+                        <th scope="col" class="px-6 py-3 text-right">
+                            Actions
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let city of cityList"
+                        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                        <th scope="row"
+                            class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
+                            <img class="w-10 h-10 rounded" [src]="'http://localhost:8080/city/download-photo/'+city.id"
+                                alt="Jese image">
+                        </th>
+                        <td class="px-6 py-4 text-base text-white">
+                            {{city.name}}
+                        </td>
+                        <td class="px-6 py-4 text-right">
+                            <div class="inline-flex">
+                                <a (click)="openEditModal(city)"
+                                    class="cursor-pointer font-medium text-red-600 dark:text-blue-500 hover:underline">Edit</a>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr *ngIf="cityList.length == 0">
+                        <td colspan="4"
+                            class="px-6 py-4 text-2xl text-center dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                            No cities
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+<div *ngIf="openModal" class="fixed top-0 left-0 w-full h-full flex justify-center items-center bg-black bg-opacity-50">
+    <div class="relative p-4 w-full max-w-md max-h-full items-center">
+        <div class="modal bg-white rounded-lg shadow dark:bg-gray-700">
+            <div class="flex items-center justify-between p-2 md:p-3 border-b rounded-t dark:border-gray-600">
+                <p *ngIf="selectedCity" class="text-2xl font-semibold text-gray-900 dark:text-white">Edit city
+                </p>
+                <p *ngIf="!selectedCity" class="text-2xl font-semibold text-gray-900 dark:text-white">Create
+                    city</p>
+                <button type="button" (click)="closeModal()" class="close transparent-close" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body overflow-auto">
+                <form (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+                    <div class="flex flex-wrap mt-3 mx-3 gap-2">
+                        <div class="w-1/4 mb-2">
+                            <div class="relative cursor-pointer" (click)="fileInput.click()">
+                                <div
+                                    class="flex justify-center items-center bg-gray-100 border border-dashed border-gray-400 rounded-lg w-full h-24">
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="w-12 h-12">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M12 4.5v15m7.5-7.5h-15" />
+                                    </svg>
+                                </div>
+                                <input type="file" #fileInput class="hidden" (change)="onFileChange($event)"
+                                    accept="image/*">
+                            </div>
+                        </div>
+                        <div class="w-1/4 mb-2" *ngIf="imagePreview">
+                            <div class="relative rounded-lg border border-gray-200 w-full h-24">
+                                <img [src]="imagePreview" class="rounded-lg w-full h-full object-cover"
+                                    alt="Uploaded image preview">
+                            </div>
+                        </div>
+                    </div>
+                    <div *ngIf="fieldErrors['file']" class="error m-3">{{ fieldErrors['file'] }}</div>
+                    <div *ngIf="selectedCity" class="m-2">
+                        <label class="block mb-2 ml-2 text-sm font-medium text-gray-900 dark:text-white"
+                            for="id">Id</label>
+                        <input [value]="selectedCity.id"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+                            type="text" disabled="">
+                    </div>
+                    <div class="m-2">
+                        <label for="cityName"
+                            class="block mb-2 ml-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
+                        <input type="text" [(ngModel)]="cityDetails.name" #cityName="ngModel"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+                            id="cityName" minlength="3" maxlength="50" name="cityName" required>
+                        <div class="alert-danger mt-1" *ngIf="cityName.errors && f.submitted">
+                            <div class="error" *ngIf="cityName.errors['required']">Name is required</div>
+                            <div class="error" *ngIf="cityName.errors['minlength']">Name must be at least 3
+                                characters</div>
+                            <div class="error" *ngIf="cityName.errors['maxlength']">Name must be less than 50
+                                characters</div>
+                        </div>
+                    </div>
+                    <div class="w-full flex justify-end">
+                        <button type="submit"
+                            class="m-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Save</button>
+                    </div>
+                </form>
+
+            </div>
         </div>
     </div>
 </div>
