--- a/student-go-web/src/app/ui/admin-event-types/admin-event-types.component.html
+++ b/student-go-web/src/app/ui/admin-event-types/admin-event-types.component.html
@@ -3,6 +3,203 @@
     <div class="p-4 dark:border-gray-700">
         <p class="text-4xl font-bold">Event Types</p>
         <div class="relative overflow-x-auto p-2">
+            <div
+                class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white">
+                <div>
+                    <button (click)="openModalCreate()"
+                        class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-3 py-1.5 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
+                        type="button">
+                        <span class="sr-only">Create button</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+                        </svg>
+                        New Event Type
+                    </button>
+                </div>
+            </div>
+            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                    <tr>
+                        <th scope="col" class="px-6 py-3">
+                            Id
+                        </th>
+                        <th scope="col" class="px-6 py-3 text-left">
+                            Name
+                        </th>
+                        <th scope="col" class="px-6 py-3 text-left">
+                            Icon Ref
+                        </th>
+                        <th scope="col" class="px-6 py-3 text-left">
+                            Color Code
+                        </th>
+                        <th scope="col" class="px-6 py-3 text-right">
+                            Actions
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let eventType of eventTypeList"
+                        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                        <td class="px-6 py-4">
+                            {{eventType.id}}
+                        </td>
+                        <td class="px-6 py-4 text-base text-white">
+                            {{eventType.name}}
+                        </td>
+                        <td class="px-6 py-4">
+                            {{eventType.iconRef}}
+                        </td>
+                        <td class="px-6 py-4">
+                            {{eventType.colorCode}}
+                        </td>
+                        <td class="px-6 py-4 text-right">
+                            <div class="inline-flex gap-2">
+                                <a (click)="openEditModal(eventType)"
+                                    class="cursor-pointer font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                                <a (click)="openDeleteModal(eventType)"
+                                    class="cursor-pointer font-medium text-red-600 dark:text-red-500 hover:underline">Delete</a>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr *ngIf="eventTypeList.length == 0">
+                        <td colspan="6"
+                            class="px-6 py-4 text-2xl text-center dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                            No event types
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+<div *ngIf="openModal" class="fixed top-0 left-0 w-full h-full flex justify-center items-center bg-black bg-opacity-50">
+    <div class="relative p-4 w-full max-w-md max-h-full items-center">
+        <div class="modal bg-white rounded-lg shadow dark:bg-gray-700">
+            <div
+                class="inline-flex w-full items-center justify-between p-2 md:p-3 border-b rounded-t dark:border-gray-600">
+                <p *ngIf="selectedEventType" class="text-2xl font-semibold text-gray-900 dark:text-white">Edit event
+                    type
+                </p>
+                <p *ngIf="!selectedEventType" class="text-2xl font-semibold text-gray-900 dark:text-white">Create
+                    event type</p>
+                <button type="button" (click)="closeModal()" class="close transparent-close" aria-label="Close">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6 text-white">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+                    </svg>
+
+                </button>
+            </div>
+            <div class="modal-body overflow-auto">
+                <form (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+                    <div *ngIf="selectedEventType" class="m-2">
+                        <label class="block mb-2 ml-2 text-sm font-medium text-gray-900 dark:text-white"
+                            for="id">Id</label>
+                        <input [value]="selectedEventType.id"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+                            type="text" disabled="">
+                    </div>
+                    <div class="m-2">
+                        <label for="cityName"
+                            class="block mb-2 ml-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
+                        <input type="text" [(ngModel)]="eventTypeDetails.name" #cityName="ngModel"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+                            id="cityName" minlength="3" maxlength="50" name="cityName" required>
+                        <div class="alert-danger mt-1" *ngIf="cityName.errors && f.submitted">
+                            <div class="error" *ngIf="cityName.errors['required']">Name is required</div>
+                            <div class="error" *ngIf="cityName.errors['minlength']">Name must be at least 3
+                                characters</div>
+                            <div class="error" *ngIf="cityName.errors['maxlength']">Name must be less than 50
+                                characters</div>
+                        </div>
+                        <div *ngIf="fieldErrors['name']" class="error">{{ fieldErrors['name'] }}</div>
+                    </div>
+                    <div class="m-2">
+                        <div class="inline-flex w-full justify-between items-center">
+                            <label for="iconRef" class="block ml-2 text-sm font-medium text-gray-900 dark:text-white">
+                                Icon Ref
+                            </label>
+                            <div class="advice m-2 text-white text-xs">
+                                Click <a class="text-blue-500 underline" target="_blank"
+                                    href="https://api.flutter.dev/flutter/material/Icons-class.html">here</a>
+                                to search for an icon
+                            </div>
+                        </div>
+                        <input type="text" [(ngModel)]="eventTypeDetails.iconRef" #iconRef="ngModel"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+                            id="iconRef" minlength="6" maxlength="6" name="iconRef" required>
+                        <div class="alert-danger mt-1" *ngIf="iconRef.errors && f.submitted">
+                            <div class="error" *ngIf="iconRef.errors['required']">Icon Ref is required</div>
+                            <div class="error" *ngIf="iconRef.errors['minlength'] || iconRef.errors['maxlength']">Icon
+                                Ref must be 6
+                                characters</div>
+                        </div>
+                        <div *ngIf="fieldErrors['iconRef']" class="error">{{ fieldErrors['iconRef'] }}</div>
+                    </div>
+                    <div class="m-2">
+                        <div class="inline-flex w-full justify-between items-center">
+                            <label for="colorCode"
+                                class="block ml-2 text-sm font-medium text-gray-900 dark:text-white">Color
+                                code</label>
+                            <div class="advice m-2 text-white text-xs">
+                                Click <a class="text-blue-500 underline" target="_blank"
+                                    href="https://api.flutter.dev/flutter/material/Colors-class.html">here</a>
+                                to search for a color code
+                            </div>
+                        </div>
+                        <input type="text" [(ngModel)]="eventTypeDetails.colorCode" #colorCode="ngModel"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+                            id="colorCode" minlength="10" maxlength="10" name="colorCode" required>
+                        <div class="alert-danger mt-1" *ngIf="colorCode.errors && f.submitted">
+                            <div class="error" *ngIf="colorCode.errors['required']">Color code is required</div>
+                            <div class="error" *ngIf="colorCode.errors['minlength'] || colorCode.errors['maxlength']">
+                                Name must be 10
+                                characters</div>
+                        </div>
+                        <div *ngIf="fieldErrors['colorCode']" class="error">{{ fieldErrors['colorCode'] }}</div>
+                    </div>
+                    <div class="w-full flex justify-end">
+                        <button type="submit"
+                            class="m-2 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Save</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+<div *ngIf="openModalDelete"
+    class="fixed top-0 left-0 w-full h-full flex justify-center items-center bg-black bg-opacity-50">
+    <div class="relative p-4 w-full max-w-md max-h-full">
+        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <button type="button" (click)="closeDeleteModal()"
+                class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                data-modal-hide="popup-modal">
+                <svg class="w-3 h-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                </svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+            <div class="p-4 md:p-5 text-center">
+                <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>
+                <h3 class="mb-3 text-lg font-normal text-gray-500 dark:text-white">Are you sure you want to delete
+                    this product?</h3>
+                <p class="mb-5 text-sm font-normal text-gray-500 dark:text-gray-400">If you delete this event type, it
+                    will be deleted from all students and associated events.</p>
+                <button (click)="submitDelete()" type="button"
+                    class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                    Yes, I'm sure
+                </button>
+                <button (click)="closeDeleteModal()" type="button"
+                    class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">No,
+                    cancel</button>
+            </div>
         </div>
     </div>
 </div>
