--- a/student-go-web/src/app/ui/admin-event-types/admin-event-types.component.html
+++ b/student-go-web/src/app/ui/admin-event-types/admin-event-types.component.html
@@ -119,7 +119,7 @@
                             <label for="iconRef" class="block ml-2 text-sm font-medium text-gray-900 dark:text-white">
                                 Icon Ref
                             </label>
-                            <div class="advice m-2 text-white text-xs">
+                            <div class="advice m-2 text-black text-xs">
                                 Click <a class="text-blue-500 underline" target="_blank"
                                     href="https://api.flutter.dev/flutter/material/Icons-class.html">here</a>
                                 to search for an icon
@@ -141,7 +141,7 @@
                             <label for="colorCode"
                                 class="block ml-2 text-sm font-medium text-gray-900 dark:text-white">Color
                                 code</label>
-                            <div class="advice m-2 text-white text-xs">
+                            <div class="advice m-2 text-black text-xs">
                                 Click <a class="text-blue-500 underline" target="_blank"
                                     href="https://api.flutter.dev/flutter/material/Colors-class.html">here</a>
                                 to search for a color code
