--- a/student-go-web/src/app/ui/home-page/home-page.component.html
+++ b/student-go-web/src/app/ui/home-page/home-page.component.html
@@ -24,15 +24,20 @@
     <p class="text-3xl text-blue-900 font-semibold mx-3 mt-3 text-center">Top Cities</p>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mx-3 my-4">
         <div (click)="selectCity(city.name)" class="col cursor-pointer" *ngFor="let city of cities">
-            <div class="relative rounded-3xl overflow-hidden h-64">
-                <img [src]="'http://localhost:8080/city/download-photo/'+city.id" class="w-full h-full object-cover"
+            <div class="relative rounded-3xl overflow-hidden h-64 group">
+                <img [src]="'http://localhost:8080/city/download-photo/'+city.id"
+                    class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110"
                     [alt]="city.name">
-                <div class="absolute top-0 left-0 w-full h-full bg-black opacity-50 z-10"></div>
+                <div
+                    class="absolute top-0 left-0 w-full h-full bg-black opacity-50 transition-opacity duration-500 group-hover:opacity-30 z-10">
+                </div>
                 <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center text-center z-20">
-                    <p class="text-white fw-bold text-3xl">{{city.name}}</p>
+                    <p class="text-white font-medium text-3xl transition-opacity duration-500 group-hover:opacity-100">
+                        {{city.name}}</p>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
